--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
     <div class="container">
       <div class="text-center">
         <div class="col-md-3">
-          <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <i class="fa fa-book"></i>
-            <h2>RECORD</h2>
-            <p>We record everything in detail</p>
+          <div>
+            <img src ="images/images1533754598.png">
+            <h2><a href="missing_report.html">Click Here for missing report</a></h2>
+            <p>Helps in finding your loved once.</p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-            <i class="fa fa-laptop"></i>
-            <h2>FULLY DIGITAL</h2>
-            <p>We keep every record in digital saving trees.</p>
+            <img src ="images/54066523-most-wanted-poster-vintage-design-and-search-most-wanted-people-special-poster-vector-most-wanted-ma.jpg">
+            <h2><a href="missing_report.html">Click Here to see most wanted people</a></h2>
+            <p>Gives you the list of most wanted persons.</p>
           </div>
         </div>
         <div class="col-md-3">
