Login and missing features

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     Author: BootstrapMade
     Author URL: https://bootstrapmade.com
   ======================================================= -->
+    <style>
+       
+         @media screen and (min-width:721px){
+        .bacimg1{
+        background-image: url(images/when-will-you-return-signage-1749057.jpg);background-attachment: fixed;
+        }
+        }
+         @media screen and (max-width:720px){
+        .bacimg1{
+        background-image: url(loginj/img/photo-1497514440240-3b870f7341f0.jpg);background-attachment: fixed;
+        }
+        }
+    </style>
 </head>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
@@ -80,12 +93,12 @@
   <section id="main-slider" class="no-margin">
     <div class="carousel slide">
       <div class="carousel-inner">
-        <div class="item active" style="background-image: url(images/slider/OF8jMa.jpg)">
+        <div class="item active" style="background-image: url(images/slider/OF8jMa.jpg);background-attachment: fixed">
           <div class="container">
             <div class="row slide-margin">
               <div class="col-sm-6">
                 <div class="carousel-content">
-                  <h2 class="animation animated-item-1">CRIME
+                  <h2 class="animation animated-item-1" >CRIME
                       <span>REPORTING</span></h2>
                   <p class="animation animated-item-2">A app that helps you report crime</p>
                   <a class="btn-slide animation animated-item-3" href="./loginj/ki.html">Click to Report</a>
@@ -106,24 +119,54 @@
       <!--/.carousel-inner-->
     </div>
     <!--/.carousel-->
-  </section>
+  
   <!--/#main-slider-->
+    
+    <div class="carousel slide">
+      <div class="carousel-inner">
+        <div class="item active bacimg1" >
+          <div class="container">
+            <div class="row slide-margin">
+              <div class="col-sm-7">
+                <div class="carousel-content">
+                  <h2 class="animation animated-item-1" style="color: black">MISSING
+                      <span>REPORT</span></h2>
+                  <p class="animation animated-item-2" style="color: black">A app that helps you to find your missing once</p>
+                  <a class="btn-slide animation animated-item-3" href="./loginj/ki.html">Click to Report</a>
+                </div>
+              </div>
+
+              <div class="col-sm-4 hidden-xs animation animated-item-4">
+                <div class="slider-img">
+                  <img src="images/144053-200.png" width="400px" height="400px" class="img-responsive">
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <!--/.item-->
+      </div>
+      <!--/.carousel-inner-->
+    </div>
+    <!--/.carousel-->
+  </section>
 
   <div class="feature">
     <div class="container">
       <div class="text-center">
         <div class="col-md-3">
-          <div>
-            <img src ="images/images1533754598.png">
-            <h2><a href="missing_report.html">Click Here for missing report</a></h2>
-            <p>Helps in finding your loved once.</p>
+          <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+            <i class="fa fa-book"></i>
+            <h2>RECORD</h2>
+            <p>We record everything in detail</p>
           </div>
         </div>
         <div class="col-md-3">
           <div class="hi-icon-wrap hi-icon-effect wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-            <img src ="images/54066523-most-wanted-poster-vintage-design-and-search-most-wanted-people-special-poster-vector-most-wanted-ma.jpg">
-            <h2><a href="missing_report.html">Click Here to see most wanted people</a></h2>
-            <p>Gives you the list of most wanted persons.</p>
+            <i class="fa fa-laptop"></i>
+            <h2>FULLY DIGITAL</h2>
+            <p>We keep every record in digital saving trees.</p>
           </div>
         </div>
         <div class="col-md-3">
