--- a/loginj/verify.html
+++ b/loginj/verify.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="refresh" content="10">
    <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="./animate.css-master/animate.css">
         </head>
