--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,21 @@
   <link rel="stylesheet" href="css/animate.css">
   <link href="css/prettyPhoto.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" />
-  <!-- =======================================================
-    Theme Name: Company
-    Theme URL: https://bootstrapmade.com/company-free-html-bootstrap-template/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#57b846">
+  <meta name="apple-mobile-web-app-title" content="CRIME REPORT">
+  <link rel="apple-touch-icon" href="images/icons/icon-72x72.png" sizes="72x72">
+  <link rel="apple-touch-icon" href="images/icons/icon-96x96.png" sizes="96x96">
+  <link rel="apple-touch-icon" href="images/icons/icon-128x128.png" sizes="128x128">
+  <link rel="apple-touch-icon" href="images/icons/icon-144x144.png" sizes="144x144">
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" sizes="384x384">
+  <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" sizes="512x512">
+  <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#57b846">
+  <meta name="theme-color" content="#57b846">
 </head>
 
 <body>
@@ -151,6 +160,9 @@
   <script src="js/wow.min.js"></script>
   <script src="js/functions.js"></script>
   <script src="contactform/contactform.js"></script>
+    <script src="app.js"></script>
+<script src="feed.js"></script>
+
 
 </body>
 
